--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,17 +1,31 @@
 ---
+import { getCollection } from "astro:content";
 
+const videos = await getCollection("videos");
+const sorted = videos
+  .slice()
+  .sort((a, b) => (a.data.date < b.data.date ? 1 : -1));
 ---
 
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<link rel="icon" href="/favicon.ico" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>Vlog Site</title>
+  </head>
+  <body>
+    <main>
+      <h1>Vlog Site</h1>
+
+      <ul>
+        {sorted.map((v) => (
+          <li>
+            <div>{v.data.title}</div>
+            <div>{v.data.date}</div>
+            <div>{v.data.summary}</div>
+          </li>
+        ))}
+      </ul>
+    </main>
+  </body>
 </html>
